# devops_challenge_python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  sonar-project.properties
.github/workflows/: build.yml
exercise/dictionary/: .coverage  Dockerfile  Makefile  README.md  pyproject.toml
exercise/dictionary/src/: api.py  dictionary.py
exercise/dictionary/tests/unit/: __init__.py  test_api.py  test_dictionary.py
exercise/nth_letter/: Makefile  README.md  pyproject.toml
exercise/nth_letter/src/: api.py  nth_letter.py
exercise/nth_letter/tests/unit/: test_api.py  test_nth_letter.py
exercise/spending_calculator/: README.md  pyproject.toml
exercise/spending_calculator/src/: api.py  spending_calculator.py
exercise/spending_calculator/tests/unit/: test_api.py  test_spending_calculator.py
ia/: pyproject.toml  update_docs.py
